## $Header: $
##
## Makefile.am -- Process this file with automake to produce Makefile.in 
##
##
##--------------------------------------------------------------------------------
## Copyright (c) 2008, Lawrence Livermore National Security, LLC. Produced at
## the Lawrence Livermore National Laboratory. Written by Dong H. Ahn <ahn1@llnl.gov>.
## LLNL-CODE-409469. All rights reserved.
##
## This file is part of LaunchMON. For details, see
## https://computing.llnl.gov/?set=resources&page=os_projects
##
## Please also read LICENSE -- Our Notice and GNU Lesser General Public License.
##
##
## This program is free software; you can redistribute it and/or modify it under the
## terms of the GNU General Public License (as published by the Free Software
## Foundation) version 2.1 dated February 1999.
##
## This program is distributed in the hope that it will be useful, but WITHOUT ANY
## WARRANTY; without even the IMPLIED WARRANTY OF MERCHANTABILITY or
## FITNESS FOR A PARTICULAR PURPOSE. See the terms and conditions of the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU Lesser General Public License along
## with this program; if not, write to the Free Software Foundation, Inc., 59 Temple
## Place, Suite 330, Boston, MA 02111-1307 USA
##--------------------------------------------------------------------------------
##
##  Update Log:
##        May 01 2014 DHA: Added LMON_fe_getStatus.3
##        May 20 2009 DHA: Added LMON_fe_regErrorCB.3
##        Jun 09 2008 DHA: Created file.
##

man_MANS = \
  LMON_fe_attachAndSpawnDaemons.3 \
  LMON_fe_createSession.3 \
  LMON_fe_detach.3 \
  LMON_fe_getMwHostlist.3 \
  LMON_fe_getMwHostlistSize.3 \
  LMON_fe_getProctable.3 \
  LMON_fe_getProctableSize.3 \
  LMON_fe_getRMInfo.3 \
  LMON_fe_getResourceHandle.3 \
  LMON_fe_getStatus.3 \
  LMON_fe_init.3 \
  LMON_fe_kill.3 \
  LMON_fe_launchAndSpawnDaemons.3 \
  LMON_fe_launchMwDaemons.3 \
  LMON_fe_putToBeDaemonEnv.3 \
  LMON_fe_putToMwDaemonEnv.3 \
  LMON_fe_recvUsrDataBe.3 \
  LMON_fe_recvUsrDataMw.3 \
  LMON_fe_regErrorCB.3 \
  LMON_fe_regPackForFeToBe.3 \
  LMON_fe_regPackForFeToMw.3 \
  LMON_fe_regStatusCB.3 \
  LMON_fe_regUnpackForBeToFe.3 \
  LMON_fe_regUnpackForMwToFe.3 \
  LMON_fe_sendUsrDataBe.3 \
  LMON_fe_sendUsrDataMw.3 \
  LMON_fe_shutdownDaemons.3 \
  LMON_be_amIMaster.3 \
  LMON_be_assist_mw_coloc.3 \
  LMON_be_barrier.3 \
  LMON_be_broadcast.3 \
  LMON_be_finalize.3 \
  LMON_be_gather.3 \
  LMON_be_getMyProctab.3 \
  LMON_be_getMyProctabSize.3 \
  LMON_be_getMyRank.3 \
  LMON_be_getSize.3 \
  LMON_be_handshake.3 \
  LMON_be_init.3 \
  LMON_be_ready.3 \
  LMON_be_recvUsrData.3 \
  LMON_be_regErrorCB.3 \
  LMON_be_regPackForBeToFe.3 \
  LMON_be_regUnpackForFeToBe.3 \
  LMON_be_scatter.3 \
  LMON_be_sendUsrData.3 \
  LMON_mw_amIMaster.3 \
  LMON_mw_barrier.3 \
  LMON_mw_broadcast.3 \
  LMON_mw_finalize.3 \
  LMON_mw_gather.3 \
  LMON_mw_getMyRank.3 \
  LMON_mw_getSize.3 \
  LMON_mw_handshake.3 \
  LMON_mw_init.3 \
  LMON_mw_ready.3 \
  LMON_mw_recvUsrData.3 \
  LMON_mw_regErrorCB.3 \
  LMON_mw_regPackForMwToFe.3 \
  LMON_mw_regUnpackForFeToMw.3 \
  LMON_mw_scatter.3 \
  LMON_mw_sendUsrData.3 

EXTRA_DIST = $(man_MANS)
